Updated index page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
-<html>
+<html lang="en">
     <head>
-        <title>Helen's world!</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/mediga" rel="stylesheet">       
+        <style>
+            @import url('https://fonts.cdnfonts.com/css/satoshi');
+</style>
+         <style>
+    @import url('https://fonts.cdnfonts.com/css/mediga');
+</style>
 
+
+
+
+        <title>Helen Wu</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <div class="p1">
+            <p>A <span class="star">star</span> is an astronomical object comprising a luminous spheroid of plasma held together by its gravity.<img class="stargif" src="/week1_homework/materials/star 2.gif" width="100px"></p>
+            <hr>
+            <div class="overlay1">
+                <div id="text1">Project 1</div>
+            </div>
+    </div>
+       
+    
+    <div class="p2">
+            <p><img class="sungif" src="/week1_homework/materials/sun 2.gif" width="100px">The nearest star to Earth is the <span class="sun">Sun</span>.</p>
+            <hr>
+            <div class="overlay2">
+                <div id="text2">Project 2</div>
+            </div>
+     </div>
 
+     <div class="p3">
+        <p>Many other stars are visible to the naked eye at night, but their immense distances from Earth make them appear as fixed points of light.</p>
+        <div class="overlay3">
+            <div id="text3">Project 3</div>
+        </div>
+    </div>
     </body>
 </html>
