--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <link rel="icon" href="/images/black star.png">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/mediga" rel="stylesheet">       
