--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
 
      <div class="p3">
         <p>Many other stars are visible to the naked eye at night, but their immense distances from Earth make them appear as fixed points of light.</p>
+        <hr>
         <div class="overlay3">
             <div id="text3">Project 3</div>
+        </div>
+    </div>
+
+    <div class="p4">
+        <p>The most prominent stars <br>have been categorised into constellations and asterisms,<br><img class="starsky" src="/images/starinthe sky.png" width="350px"><br>and many of the brightest stars <br>have proper names.</p>
+        <div class="overlay4">
+            <div id="text4">Others</div>
         </div>
     </div>
     </body>
