--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="p4">
         <p>The most prominent stars <br>have been categorised into constellations and asterisms,<br><img class="starsky" src="/images/starinthe sky.png" width="350px"><br>and many of the brightest stars <br>have proper names.</p>
         <div class="overlay4">
-            <div id="text4">Others</div>
+            <div id="text4"><a href="/week1_homework/storytelling.html">Others</a></div>
         </div>
     </div>
     </body>
