--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
         <link rel="icon" href="/images/black star.png">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-        <link href="https://fonts.cdnfonts.com/css/mediga" rel="stylesheet">       
+        <link href="https://fonts.cdnfonts.com/css/mediga" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/stix-two-math" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/scheherazade-new" rel="stylesheet">
+                
+                     
         <style>
             @import url('https://fonts.cdnfonts.com/css/satoshi');
 </style>
          <style>
     @import url('https://fonts.cdnfonts.com/css/mediga');
 </style>
+         <style>
+    @import url('https://fonts.cdnfonts.com/css/stix-two-math');
+</style>
+         <style>
+    @import url('https://fonts.cdnfonts.com/css/scheherazade-new');
+</style>
+
+
+
 
 
 
