Table of Contents 1

--- a/week3_homework_studio/table1.html
+++ b/week3_homework_studio/table1.html
@@ -13,11 +13,110 @@
             </div>
         <div class="contents">Contents</div>
         <div class="content1">
-            <details id="chapter1">
+            <details open class="chapter0">
                 <summary>1. Early Stirrings <span id="page1">– 1</span></summary> 
-                <p id="deb1">Perception torn from thinking.</p>
+                <p class="deb">Perception torn from thinking.</p>
             </details>
         </div>
+        <div class="content2">
+            <details open class="chapter">
+                <summary>2. The Intelligence of Perception (i) <span id="page2">– 13</span></summary> 
+                <p class="deb">Perception as cognition.</p>
+            </details>
+        </div>
+        <div class="content3">
+            <details open class="chapter">
+                <summary>3. The Intelligence of Perception (ii) <span id="page3">– 37</span></summary> 
+                <p class="deb">Subtracting the context.</p>
+            </details>
+        </div>
+        <div class="content4">
+            <details open class="chapter">
+                <summary>4. Two and Two Together <span id="page4">– 54</span></summary> 
+                <p class="deb">Relations depend on structure.</p>
+            </details>
+        </div>
+        <div class="content5">
+            <details open class="chapter">
+                <summary>5. The Past in the Present<span id="page5">– 80</span></summary> 
+                <p class="deb">Forces acting on memory.</p>
+            </details>
+        </div>
+        <div class="content6">
+            <details open class="chapter">
+                <summary>6. The Images of Thought<span id="page6">– 97</span></summary> 
+                <p class="deb">What are mental images like?</p>
+            </details>
+        </div>
+        <div class="content7">
+            <details open class="chapter">
+                <summary>7. Concepts Take Shape<span id="page7">– 116</span></summary> 
+                <p class="deb">Abstract gestures.</p>
+            </details>
+        </div>
+        <div class="content8">
+            <details open class="chapter">
+                <summary>8. Pictures, Symbols, and Signs<span id="page8">– 135</span></summary> 
+                <p class="deb">The functions of images.</p>
+            </details>
+        </div>
+        <div class="content9">
+            <details open class="chapter">
+                <summary>9. What Abstraction Is Not<span id="page9">– 153</span></summary> 
+                <p class="deb">A harmful dichotomy.</p>
+            </details>
+        </div>
+        <div class="content10">
+            <details open class="chapter">
+                <summary>10. What Abstraction Is<span id="page10">– 153</span></summary> 
+                <p class="deb">Types and containers.</p>
+            </details>
+        </div>
+        <div class="content11">
+            <details open class="chapter">
+                <summary>11. With Feet on the Ground<span id="page11">– 188</span></summary> 
+                <p class="deb">Abstraction as withdrawal.</p>
+            </details>
+        </div>
+        <div class="content12">
+            <details open class="chapter">
+                <summary>12. Thinking With Pure Shapes<span id="page12">– 208</span></summary> 
+                <p class="deb">Numbers reflect life.</p>
+            </details>
+        </div>
+        <div class="content13">
+            <details open class="chapter">
+                <summary>13. Words in Their Place<span id="page13">– 226</span></summary> 
+                <p class="deb">Can one think in words?</p>
+            </details>
+        </div>
+        <div class="content14">
+            <details open class="chapter">
+                <summary>14. Art and Thought<span id="page14">– 254</span></summary> 
+                <p class="deb">Thinking in children's drawings.</p>
+            </details>
+        </div>
+        <div class="content15">
+            <details open class="chapter">
+                <summary>15. Models for Theory<span id="page15">– 274</span></summary> 
+                <p class="deb">Cosmological shapes.</p>
+            </details>
+        </div>
+        <div class="content16">
+            <details open class="chapter">
+                <summary>16. Vision in Education<span id="page16">– 294</span></summary> 
+                <p class="deb">What is art for?</p>
+            </details>
+        </div>
+        <div class="notes">Notes <span id="notespage">– 317</span>
+        </div>
+        </div>
+        <div class="biblio">Bibliography <span id="bibliopage">– 325</span>
+        </div>
+        </div>
+        <div class="index">index <span id="indexpage">– 339</span>
+        </div>
+    
 
     </body>
 </html>
