--- a/week3_homework_lab/index.html
+++ b/week3_homework_lab/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://wuhe113.github.io/week2_homework/index/reset.css" rel="stylesheet">
+        <link href="https://core-interaction.github.io/assets/styles/reset.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
         <title>Weather</title>
     </head>
@@ -21,7 +21,7 @@
             <!-- Section tag defines the section of the document, below is the content.-->
                 <ul>
                 <!-- An unordered list -->
-                    <li style="font-size:18px"><strong>Saturday, February 11, 2023</strong></li>
+                    <li><strong>Saturday, February 11, 2023</strong></li>
                         <dl>
                         <!-- A description list -->
                             <dt>0°- 6°</dt>
@@ -29,22 +29,22 @@
                             <dd>Saturday's low will be 0° between 07:00 and 08:00, and the high will be 6° between 15:00 and 16:00.</dd>
                             <!-- To define the description descriptor: further describe the weather.  -->
                         </dl>
-                    <li style="font-size:18px"><strong>Sunday, February 12, 2023</strong></li>
+                    <li><strong>Sunday, February 12, 2023</strong></li>
                         <dl>
                             <dt>-1°- 6°</dt>
                             <dd>Saturday's low will be -1° between 06:00 and 07:00, and the high will be 6° between 15:00 and 16:00.</dd>
                         </dl>
-                    <li style="font-size:18px"><strong>Monday, February 13, 2023</strong></li>
+                    <li><strong>Monday, February 13, 2023</strong></li>
                         <dl>
                             <dt>2°- 10°</dt>
                             <dd>Monday's low will be 2° between 06:00 and 07:00, and the high will be 10° between 15:00 and 16:00.</dd>
                         </dl>
-                    <li style="font-size:18px"><strong>Tuesday, February 14, 2023</strong></li>
+                    <li><strong>Tuesday, February 14, 2023</strong></li>
                         <dl>
                             <dt>2°- 12°</dt>
                             <dd>Tuesday's low will be 2° between 06:00 and 07:00, and the high will be 12° between 13:00 and 13:00.</dd>
                         </dl>
-                    <li style="font-size:18px"><strong>Wednesday, February 15, 2023</strong></li>
+                    <li><strong>Wednesday, February 15, 2023</strong></li>
                         <dl>
                             <dt>2°- 11°</dt>
                             <dd>Wednesday's low will be 2° between 05:00 and 06:00, and the high will be 11° between 15:00 and 16:00.</dd>
@@ -55,7 +55,7 @@
 
         <hr>
 
-        <footer style="text-align:right">Powered by Weather Data</footer>
+        <footer>Powered by Weather Data</footer>
         <!-- Authorship information  -->
     </body>
     </html>
