Revised table of contents 3

--- a/week3_homework_studio/table3.html
+++ b/week3_homework_studio/table3.html
@@ -76,6 +76,27 @@
             <span id="deb9"><br>A harmful dichotomy.</span>
         </div>
 
+        <div class="chapter10">
+            <span id="cha10">10.</span>
+            What Abstraction Is
+            <span id="page10">-153</span>
+            <span id="deb10"><br>Types and containers.</span>
+        </div>
+
+        <div class="chapter11">
+            <span id="cha11">11.</span>
+            With Feet on the Ground
+            <span id="page11">-188</span>
+            <span id="deb11"><br>Abstraction as withdrawal.</span>
+        </div>
+
+        <div class="chapter12">
+            <span id="cha12">12.</span>
+            Thinking With Pure Shapes
+            <span id="page12">-208</span>
+            <span id="deb12"><br>Numbers reflect life.</span>
+        </div>
+
         
 
         
