--- a/week3_homework_lab/index.html
+++ b/week3_homework_lab/index.html
@@ -3,14 +3,16 @@
     <head>
         <link href="https://core-interaction.github.io/assets/styles/reset.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400&family=Monofett&family=Vast+Shadow&display=swap" rel="stylesheet">
         <title>Weather</title>
     </head>
     
     <body>
+
         <header>
             <h1>New York Weather Forecast</h1>
             <!-- This is a headline of the website. -->
-            <h3>☼ Here is the weather forecast for future 5 days in New York ☼ </h3>
+            <h3>Here is the weather forecast for future 5 days in New York</h3>
             <!-- This is an explanation fo the website. -->
         </header>
 
@@ -21,7 +23,7 @@
             <!-- Section tag defines the section of the document, below is the content.-->
                 <ul>
                 <!-- An unordered list -->
-                    <li><strong>Saturday, February 11, 2023</strong></li>
+                    <li class="date"><strong>Saturday, February 11, 2023</strong></li>
                         <dl>
                         <!-- A description list -->
                             <dt>0°- 6°</dt>
@@ -29,22 +31,22 @@
                             <dd>Saturday's low will be 0° between 07:00 and 08:00, and the high will be 6° between 15:00 and 16:00.</dd>
                             <!-- To define the description descriptor: further describe the weather.  -->
                         </dl>
-                    <li><strong>Sunday, February 12, 2023</strong></li>
+                    <li class="date"><strong>Sunday, February 12, 2023</strong></li>
                         <dl>
                             <dt>-1°- 6°</dt>
                             <dd>Saturday's low will be -1° between 06:00 and 07:00, and the high will be 6° between 15:00 and 16:00.</dd>
                         </dl>
-                    <li><strong>Monday, February 13, 2023</strong></li>
+                    <li class="date"><strong>Monday, February 13, 2023</strong></li>
                         <dl>
                             <dt>2°- 10°</dt>
                             <dd>Monday's low will be 2° between 06:00 and 07:00, and the high will be 10° between 15:00 and 16:00.</dd>
                         </dl>
-                    <li><strong>Tuesday, February 14, 2023</strong></li>
+                    <li class="date"><strong>Tuesday, February 14, 2023</strong></li>
                         <dl>
                             <dt>2°- 12°</dt>
                             <dd>Tuesday's low will be 2° between 06:00 and 07:00, and the high will be 12° between 13:00 and 13:00.</dd>
                         </dl>
-                    <li><strong>Wednesday, February 15, 2023</strong></li>
+                    <li class="date"><strong>Wednesday, February 15, 2023</strong></li>
                         <dl>
                             <dt>2°- 11°</dt>
                             <dd>Wednesday's low will be 2° between 05:00 and 06:00, and the high will be 11° between 15:00 and 16:00.</dd>
@@ -55,7 +57,7 @@
 
         <hr>
 
-        <footer>Powered by Weather Data</footer>
+        <footer><p id="authorship">Powered by Weather Data</p></footer>
         <!-- Authorship information  -->
     </body>
     </html>
