Revised <hr> user style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <!-- <link href="https://core-interaction.github.io/assets/styles/reset.css" rel="stylesheet"> -->
         <link rel="icon" href="/images/black star.png">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
@@ -8,18 +9,7 @@
         <link href="https://fonts.cdnfonts.com/css/scheherazade-new" rel="stylesheet">
                 
                      
-        <style>
-            @import url('https://fonts.cdnfonts.com/css/satoshi');
-</style>
-         <style>
-    @import url('https://fonts.cdnfonts.com/css/mediga');
-</style>
-         <style>
-    @import url('https://fonts.cdnfonts.com/css/stix-two-math');
-</style>
-         <style>
-    @import url('https://fonts.cdnfonts.com/css/scheherazade-new');
-</style>
+
         <title>Helen Wu</title>
     </head>
 
@@ -44,10 +34,10 @@
 
      <div class="p3">
         <p>Many other stars are visible to the naked eye at night, but their immense distances from Earth make them appear as fixed points of light.</p>
-        <hr>
         <div class="overlay3">
             <div id="text3">Project 3</div>
         </div>
+        <hr>
     </div>
 
     <div class="p4">
