--- a/project1/index.html
+++ b/project1/index.html
@@ -1,6 +1,8 @@
 <html lang="en">
     <head>
         <link href="https://fonts.cdnfonts.com/css/lment-v02" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/steamflix-grotesk" rel="stylesheet">
+                
         <link rel="stylesheet" href="style.css">
         <title>The Library of Babel</title>
 
@@ -8,16 +10,47 @@
 
     <body>
         <div class="intro">
-            <span style="--i:1">Would&nbsp</span>
+            <!-- <br> -->
+            <!-- <span style="--i:1">Would&nbsp</span>
             <span style="--i:2">you&nbsp</span>
             <span style="--i:3">like&nbsp</span>
             <span style="--i:4">to&nbsp</span>
-            <span style="--i:5">enter&nbsp</span>
-            <span style="--i:6">the&nbsp</span>
-            <span style="--i:7">library&nbsp</span>
-            <span style="--i:8">of&nbsp</span>
-            <span style="--i:9">Babel&nbsp</span>
-            <div><span id="enter" style="--i:10">&#11041;</span></div> 
+            <span style="--i:5">enter&nbsp</span> -->
+            <span style="--i:1">t</span>
+            <span style="--i:2">h</span>
+            <span style="--i:3">e</span>
+            <span style="--i:4">&nbsp</span>
+            <span style="--i:5">l</span>
+            <span style="--i:6">i</span>
+            <span style="--i:7">b</span>
+            <span style="--i:8">r</span>
+            <span style="--i:9">a</span>
+            <span style="--i:10">r</span>
+            <span style="--i:11">y</span>
+            <span style="--i:12">&nbsp</span>
+            <span style="--i:13">o</span>
+            <span style="--i:14">f</span>
+            <span style="--i:15">&nbsp</span>
+            <span style="--i:16">b</span>
+            <span style="--i:17">a</span>
+            <span style="--i:18">b</span>
+            <span style="--i:19">e</span>
+            <span style="--i:20">l</span>
+            <div><a href="/project1/library.html"><span id="hex" style="--i:21">
+                click
+            </span></a></div> 
+            <!-- <div><marquee id="mar1" scrollamount="7">&#11041;</marquee></div> -->
+        </div>
+        <!-- <div id="hex"></div> -->
+        <div class="background">
+            <span id="maze1"></span>
+            <span id="maze2" ></span>
+            <span id="maze3"></span>
+            <span id="maze4"></span>
+            <span id="maze5"></span>
+            <span id="maze6"></span>
+            <span id="maze7"></span>
+            <span id="maze8"></span>
         </div>
     </body>
 
