Added project1 link to index page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>A <span class="star">star</span> is an astronomical object comprising a luminous spheroid of plasma held together by its gravity.<img class="stargif" src="/week1_homework/materials/star 2.gif" width="100px"></p>
             <hr>
             <div class="overlay1">
-                <div id="text1">Project 1</div>
+                <div id="text1"><a href="/project1/index.html">Project 1</a></div>
             </div>
     </div>
        
