--- a/project1/index.html
+++ b/project1/index.html
@@ -41,6 +41,7 @@
             </span></a></div> 
             <!-- <div><marquee id="mar1" scrollamount="7">&#11041;</marquee></div> -->
         </div>
+        <div id="author">By Jorge Luis Borges</div>
         <!-- <div id="hex"></div> -->
         <div class="background">
             <span id="maze1"></span>
