--- a/project2_demo/index.html
+++ b/project2_demo/index.html
@@ -11,6 +11,8 @@
 
     <body>
         <h1 id="headline">Manhattan Public Restroom</h1>
-        <ul id="collection"></ul>
+        <!-- <ul id="collection"></ul> -->
+        <ul id="midtown"></ul>
+        <ul id="downtown"></ul>
     </body>
 </html>
