--- a/project2/midtown.html
+++ b/project2/midtown.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>MPR Collection</title>
+        <title>MPR Midtown</title>
+        <link rel="icon" href="icon.png">
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="assets/town.css">
         <link href="https://fonts.cdnfonts.com/css/carola" rel="stylesheet">
