--- a/project2/index.html
+++ b/project2/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>MPR</title>
+        <link rel="icon" href="icon.png">
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.cdnfonts.com/css/carola" rel="stylesheet">
