alt-text demo added css

--- a/week11_studio_demo/index.html
+++ b/week11_studio_demo/index.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <img src="/images/stars.jpg" alt="twinkle twinkle stars like tears of galaxy" width="400px">
-        <img src="/images/melonsoda.jpeg" alt="my life is nothing without creamy melon soda" width="400px">
+        <img src="/images/stars.jpg" alt="twinkle twinkle stars like tears of galaxy." width="400px">
+        <img src="/images/melonsoda.jpeg" alt="my life is nothing without creamy melon soda." width="400px">
 
     </body>
 
