Added some basic css

--- a/week11_homework_lab/index.html
+++ b/week11_homework_lab/index.html
@@ -6,7 +6,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
-    <body>
-
+    <body id="top">
+        <header>
+            <h1>Yellow in poster design</h1>
+        </header>
+        <main>
+            <ul>
+                <li>Poster1</li>
+                <li>Poster2</li>
+                <li>Poster3</li>
+                <li>Poster4</li>
+                <li>Poster5</li>
+                <li>Poster6</li>
+                <li>Poster7</li>
+                <li>Poster8</li>
+                <li>Poster9</li>
+                <li>Poster10</li>
+                
+            </ul>
+        </main>
+        <aside>
+            color
+        </aside>
+        <footer>
+            <a href="#top">Return to top</a>
+        </footer>
     </body>
 </html>
