Started styling list/grid

--- a/week11_homework_lab/index.html
+++ b/week11_homework_lab/index.html
@@ -11,7 +11,7 @@
             <h1>Yellow in poster design</h1>
         </header>
         <main>
-            <ul>
+            <ul id="poster-list">
                 <li>Poster1</li>
                 <li>Poster2</li>
                 <li>Poster3</li>
