Added links to each album

--- a/week11_homework_lab/index.html
+++ b/week11_homework_lab/index.html
@@ -3,26 +3,48 @@
         <title>Flex and Grid</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/zxz1cyl.css">
+        <link rel="stylesheet" href="https://use.typekit.net/iox1ytp.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body id="top">
         <header>
-            <h1>Yellow in poster design</h1>
+            <h1>Playlist:</h1>
+            <p id="colorBar"></p>
         </header>
         <main>
             <ul id="poster-list">
-                <li>Poster1</li>
-                <li>Poster2</li>
-                <li>Poster3</li>
-                <li>Poster4</li>
-                <li>Poster5</li>
-                <li>Poster6</li>
-                <li>Poster7</li>
-                <li>Poster8</li>
-                <li>Poster9</li>
-                <li>Poster10</li>
-                
+                <li><a href="https://open.spotify.com/album/1uFp52Q9EXLNA6DTRYnpTj?si=y5VAUMu4QSi4hWU3pi6riw"><img src="images/1.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/2MVgQrstFueu9DaTUeZtc4?si=Fi8KZ3vqSvuBtPWgfOXDIQ"><img src="images/2.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/0KkHzH0uia9zwPbrCbS6NY?si=c04fEGGTTy-0-l5Z0TT1PQ"><img src="images/3.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/7vquQAWbCFooOeeSrKDQky?si=2kCpD9ttTYOX3V4cD0La-g"><img src="images/4.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/3QaWpNuVe2FRMDAnG2iPwx?si=FYRHx5hyTzSqsGGgqZUd4w"><img src="images/5.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/3IhDL1HDvlujs6ZcIfL9gE?si=n0nC72wGSZymfBt6pt1ggw"><img src="images/6.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/1Gi6ij4Jxc4qE35i3I0gqS?si=3CTrQr3GSJWy19RcYz6gkw"><img src="images/7.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/08LqgYfYfLGr6pvZ9WelfY?si=JeE-rcZkTpWA8_J3cUMZ8A"><img src="images/8.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/6XL7xYCvmxn1ny4cudhO5S?si=oSq552glScSzVvxLipAjzg"><img src="images/9.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/5lJkNIn50myKnbuwOk8TSG?si=CUkolBqLQhu3Hy5Luf-83A"><img src="images/10.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/23FDKDukcC9STmxRTaZnx2?si=5muKy9NhQGmUArJZOjykBw"><img src="images/11.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/7ivbFszr1TbVadj89BIy1y?si=ywhaQ1E-SY-0kfFCRrhc9g"><img src="images/12.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/1ERqcew3rdwwhaLQUPpOfp?si=Ju9EeWGWQ0Kqq0gYA_UrAQ"><img src="images/13.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/4PFKs4k84A1sMcUPKEQ5kE?si=OhIU7u4fQBe2GnTneEAeyw"><img src="images/14.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/1SMSwFypOv7m5OWgSObTdX?si=y4YMTmr4QzWT6r7Kq64btw"><img src="images/15.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/5ugjgbvqSNYigkw9gemwmC?si=6i__KlSpTFOJxwHFV04zfg"><img src="images/16.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/6bO3NEt9JyDLuPpbKvaJE8?si=RnsnQwmBRPiImF4VuAFajg"><img src="images/17.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/6jrhLfqaMqnlGtegIoqVF7?si=MRtd9975RP6rQGMhaVRhDw"><img src="images/18.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/5zeMT15PpHOiE8KmLvMk8F?si=4pTG73BITB-qNRtVnksX-g"><img src="images/19.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/3IJE33ruLyvq3yCiJubw4g?si=WElGuCShSeOQ8FmV4kIEtg"><img src="images/20.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/0ZP38Xqhk1bKR55P4Iu029?si=6Z_-GUOeSzK1DMQexfNC2A"><img src="images/21.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/3gGYHCVl2KuIIk4iyDO81f?si=Q090fzJtRdqdXBaPnVZoIA"><img src="images/22.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/5IIZbejHl1W240sXPNbSLV?si=SKxqGB6AQf2NB3WGoNwkfg"><img src="images/23.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/33o4d0FukQCRK4DSW4cFoX?si=xq24__yGQZyeQO-eLGkJWw"><img src="images/24.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/6STIGUizJUhGprqXZBJL04?si=-3RuvEbRRCaRI2LZsvFVOA"><img src="images/25.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/03TjkEb37QdFanVBYercfA?si=XfOyFV5KTXeZchcoWedC5w"><img src="images/26.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/6y1MKZwp2xxop7Ep18d8AK?si=lntYfmEHQ_KgXC-riD-KTw"><img src="images/27.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/5ax2uYwKJV6BG3JaHAt2kq?si=sbZjNld6Tkmdml9EjIWCNQ"><img src="images/28.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/4o54aWSH3QaWkRjS5Pl2I6?si=RdzS1HOQSnO_rXozkiSiGQ"><img src="images/29.PNG"></a></li>
+                <li><a href="https://open.spotify.com/album/3T6AZAlVW5KbZnmuBxZ4ZP?si=SqefndOOSdGTlAmNWQsenw"><img src="images/30.PNG"></a></li>
+
             </ul>
         </main>
         <aside>
