Initial grid set up

--- a/week11_homework_lab/index.html
+++ b/week11_homework_lab/index.html
@@ -12,6 +12,9 @@
             <h1>Playlist:</h1>
             <p id="colorBar"></p>
         </header>
+        <aside>
+            Pick a color for today
+        </aside>
         <main>
             <ul id="poster-list">
                 <li><a href="https://open.spotify.com/album/1uFp52Q9EXLNA6DTRYnpTj?si=y5VAUMu4QSi4hWU3pi6riw"><img src="images/1.PNG"></a></li>
@@ -47,9 +50,6 @@
 
             </ul>
         </main>
-        <aside>
-            color
-        </aside>
         <footer>
             <a href="#top">Return to top</a>
         </footer>
