--- a/week11_homework_lab/index.html
+++ b/week11_homework_lab/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Flex and Grid</title>
+        <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/zxz1cyl.css">
         <link rel="stylesheet" href="https://use.typekit.net/iox1ytp.css">
