pass data to html

--- a/week12_lab/index.html
+++ b/week12_lab/index.html
@@ -9,5 +9,11 @@
 
     <body>
         <h1>Squirrel Census</h1>
+        <ul id="graph">
+            <li>Gray</li>
+            <li>Cinnamon</li>
+            <li>Black</li>
+            <li>Unknown</li>
+        </ul>
     </body>
 </html>
