Adapted data for graph-width

--- a/project3/index.html
+++ b/project3/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Wifi: Open Space NYC</h1>
-        <ul id="provider-graph">
+        <ul id="providerGraph">
             <li id="alt">ALTICEUSA</li>
             <li id="spec">SPECTRUM</li>
             <li id="att">AT&T</li>
