--- a/project3/index.html
+++ b/project3/index.html
@@ -3,6 +3,8 @@
         <title>Wifi: Open Space NYC</title>
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="assets/style.css">
+        <link rel="icon" href="assets/32.png">
+        <link href="assets/touch.png"  rel="apple-touch-icon">
         <link rel="stylesheet" href="https://use.typekit.net/bum0kxj.css">
         <link href="https://fonts.cdnfonts.com/css/ibm-plex-sans-kr" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
