--- a/project3/index.html
+++ b/project3/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Wifi: Open Space NYC</title>
+        <title>WiFi: Open Space NYC</title>
         <link rel="stylesheet" href="assets/reset.css">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="icon" href="assets/32.png">
